syntax = "proto3";

package err_code;

option go_package = "github.com/UnicomAI/wanwu/api/proto/err-code";

enum Code {
  OK = 0;

  // --- bff-service ---
  // [110000, 119999]
  BFFGeneral = 110000; // 通用错误
  BFFInvalidArg = 110001; // 参数错误
  BFFJWT = 110002; // JWT错误
  BFFAuth = 110003; // Auth错误
  BFFSensitiveWordCheck = 110005; // 敏感词校验错误
  BFFRegisterDisable = 110006; // 用户注册禁用
  BFFResetPasswordDisable = 110007; // 用户忘记密码禁用
  BFFLoginDisable = 110008; // 邮箱登录禁用
  BFFSingleLoginDisable = 110009; // 单因子登录禁用

  // --- iam-service ---
  // [120000, 129999]
  IAMGeneral = 120000; // 通用错误
  IAMInternal = 120001; // 内部错误
  IAMCaptcha = 120002; // 验证码错误
  IAMLogin = 120003; // 登录相关错误
  IAMRegister = 120004; // 注册相关错误
  IAMOrg = 120011; // 组织相关错误
  IAMRole = 120021; // 角色相关错误
  IAMUser = 120031; // 用户相关错误

  // --- perm-service ---
  // [130000, 139999]
  PermGeneral = 130000; // 通用错误
  PermRBAC = 130001; // 权限校验错误
  PermRBACReLogin = 130002; // 权限校验错误(需要重新登录)

  // --- knowledge-service ---
  // [140000, 149999]
  KnowledgeGeneral = 140000;     // 系统异常，请稍后重试
  KnowledgeBaseCreateFailed = 141001; // 新建知识库失败，请稍后重试
  KnowledgeBaseDeleteFailed = 141002; // 删除知识库失败，请稍后重试
  KnowledgeBaseUpdateFailed = 141003; // 修改知识库失败，请稍后重试
  KnowledgeBaseFetchFailed = 141004; // 获取知识库失败，请稍后重试
  KnowledgeBaseAccessDenied = 141005; // 没有操作该知识库的权限
  KnowledgeBaseDeleteDuringUpload = 141006; // 知识库正在上传文档，不可删除
  KnowledgeBaseDeleteDuringParse = 141007; // 知识库正在解析文档，不可删除
  KnowledgeBaseDuplicateName = 141008; // 已存在同名知识库
  KnowledgeBaseSelectFailed = 141009; // 查询知识库列表失败，请稍后重试
  KnowledgeBaseHitFailed = 141010; // 命中测试失败，请稍后重试
  KnowledgeDocDeleteDuringParse = 142001; // 文档正在解析文档，不可删除
  KnowledgeDocDeleteFailed = 142002; // 文档删除失败，请稍后重试
  KnowledgeDocSegmentStatusUpdateFail = 142003; // 修改文档分段状态失败，请稍后重试
  KnowledgeDocImportFail = 142004; // 文档导入失败，请稍后重试
  KnowledgeDocSplitFailed = 142005; // 文档分片查询失败，请稍后重试
  KnowledgeDocUpdateStatusFailed = 142006; // 更新文档状态失败，请稍后重试
  KnowledgeDocImportUrlFailed = 142007; // 获取上传文档失败，请稍后重试
  KnowledgeDocUpdateMetaFailed = 142008; // 更新文档元数据失败，请稍后重试
  KnowledgeDocUpdateMetaStatusFailed = 142009; // 非处理完成文档无法更新元数据，请稍后重试
  KnowledgeDocSegmentFileCSVTypeFail = 142010; // 上传文档必须是csv，请修改后重试
  KnowledgeDocUpdateMetaSameKeyFailed = 142011; // 更新文档元数据失败，已存在重复key，请稍后重试
  KnowledgeTagCreateFailed = 143001; // 新建知识库标签失败，请稍后重试
  KnowledgeTagDeleteFailed = 143002; // 删除知识库标签失败，请稍后重试
  KnowledgeTagUpdateFailed = 143003; // 修改知识库标签失败，请稍后重试
  KnowledgeTagDuplicateName = 143004; // 已存在同名知识库标签
  KnowledgeTagSelectFailed = 143005; // 查询知识库标签列表失败，请稍后重试
  KnowledgeTagBindFailed = 143006; // 知识库标签设置失败，请稍后重试
  KnowledgeTagUnbindFailed = 143007; // 知识库标签取消失败，请稍后重试
  KnowledgeTagAccessDenied = 143008; // 没有操作该知识库标签的权限
  KnowledgeKeywordsCreateFailed = 144001; // 新建关键词失败，请稍后重试
  KnowledgeKeywordsDeleteFailed = 144002; // 删除关键词失败，请稍后重试
  KnowledgeKeywordsUpdateFailed = 144003; // 修改关键词失败，请稍后重试
  KnowledgeKeywordsListFailed = 144004; // 查询关键词列表失败，请稍后重试
  KnowledgeKeywordsInfoFailed = 144005; // 查询关键词详情失败，请稍后重试
  KnowledgeKeywordsRepeated = 144006; // 关键词在知识库中已存在，请勿重复添加
  KnowledgeSplitterCreateFailed = 145001; // 新建知识库分隔符失败，请稍后重试
  KnowledgeSplitterDeleteFailed = 145002; // 删除知识库分隔符失败，请稍后重试
  KnowledgeSplitterUpdateFailed = 145003; // 修改知识库分隔符失败，请稍后重试
  KnowledgeSplitterDuplicateName = 145004; // 已存在同名知识库分隔符
  KnowledgeSplitterSelectFailed = 145005; // 查询知识库标分隔符表失败，请稍后重试
  KnowledgeSplitterAccessDenied = 145008; // 没有操作该知识库分隔符的权限
  KnowledgeDocSegmentUpdateLabelsFailed = 145009;  // 更新文档切片标签失败，请稍后重试
  KnowledgeDocSegmentCreateFailed = 145010; // 新增文档分段失败，请稍后重试
  KnowledgeDocSegmentExceedMaxSize = 145011; // 分段长度超过最大值
  KnowledgeDocSegmentUpdateFailed = 145012; // 更新文档分段失败，请稍后重试
  KnowledgeDocSegmentDeleteFailed = 145013; // 删除文档分段失败，请稍后重试
  KnowledgeMetaFetchFailed = 145014; // 查询知识库元数据失败，请稍后重试
  KnowledgeMetaCreateFailed = 145015; // 新增知识库元数据失败，请稍后重试
  KnowledgeMetaUpdateFailed = 145016; // 更新知识库元数据失败，请稍后重试
  KnowledgeMetaDeleteFailed = 145017; // 删除知识库元数据失败，请稍后重试
  KnowledgeMetaDuplicateKey = 145018; // 已存在同名元数据key
  KnowledgeInvalidArguments = 145019; // 非法参数
  KnowledgeDocSegmentEmpty = 145020; // 文档分段内容为空
  KnowledgeMetaUpdatePartialSuccess = 145021; // 部分元数据更新成功

  // --- rag-service ---
  // [150000, 159999]
  RagGeneral = 150000;      // 通用错误
  RagRole = 150001;         // 角色权限错误
  RagInfoNotExist = 150002; // rag信息不存在
  RagDeleteErr = 150003; // 删除rag错误
  RagGetErr = 150004; // 获取rag错误
  RagListErr = 150005; // 获取rag列表错误
  RagCreateErr = 150006; // rag创建错误
  RagUpdateErr = 150007; // rag更新错误
  RagChatErr = 150008; // rag流式传输问答错误

  // --- assistant-service ---
  // [160000, 169999]
  AssistantGeneral = 160000; // 通用错误
  AssistantErr = 160001; // 智能体相关错误
  AssistantActionErr = 160002; // 智能体action相关错误
  AssistantWorkflowErr = 160003; // 智能体workflow相关错误
  AssistantConversationErr = 160004; // 智能体对话相关错误
  AssistantMCPErr = 160005; // 智能体MCP相关错误
  AssistantCustomErr = 160006; // 智能体自定义工具相关错误

  // --- workflow-service ---
  // [210000, 219999]
  WorkflowGeneral = 210000; // 通用错误

  // --- model-service ---
  // [250000, 259999]
  ModelGeneral = 250000; // 通用错误
  ModelImportedModel = 250001; // 导入模型错误
  ModelGetModelById = 250002;  // 根据模型ID查询错误
  ModelUpdateModel = 250003;  // 模型更新错误
  ModelDeleteModel = 250004;  // 模型删除错误
  ModelGetModel = 250005;      // 模型查询错误
  ModelListModels = 250006;    // 模型列表错误
  ModelChangeModelStatus = 250007;   // 模型启用/关停错误
  ModelListTypeModels = 250008; // 模型llm/rerank/embedding列表错误
  ModelGetModelByIds = 250009; // 根据模型ID列表查询错误

  // --- app-service ---
  // [300000, 309999]
  AppGeneral = 300000; // 通用错误
  AppApikey = 300001; // ApiKey相关错误
  AppExploration = 300002; // APP应用广场相关错误
  AppSafety = 300003; // 安全护栏相关错误
  AppSafetySensitiveWordTable = 300004; // 安全护栏敏感词表相关错误
  AppSafetySensitiveVocabulary = 300005; // 安全护栏敏感词数据相关错误
  AppSensitiveSameWordError = 300006; // 此词表内存在相同的敏感词，请修改后重试
  AppSensitiveExistSensitiveError = 300007; // 存在敏感词：%v
  AppSafetyImportUrlFailed = 300008; // 获取上传文档失败，请稍后重试
  AppUrl = 300009; // App WebUrl错误
  AppUrlStatus = 300010; // App WebUrl状态错误
  AppUrlExpired = 300011; // App WebUrl过期错误

  // --- mcp-service ---
  // [310000, 319999]
  MCPGeneral = 310000; // 通用错误
  MCPGetSquareMCPErr = 310001; // 获取广场MCP详情错误
  MCPCreateCustomMCPErr = 310002; // 创建自定义MCP错误
  MCPGetCustomMCPErr = 310003; // 获取自定义MCP详情错误
  MCPDeleteCustomMCPErr = 310004; // 删除自定义MCP错误
  MCPGetCustomMCPListErr = 310005; // 获取自定义MCP列表错误
  MCPGetMCPAvatarErr = 310006; // 获取MCP头像错误
  MCPCreateCustomToolErr = 310007; // 创建自定义工具错误
  MCPGetCustomToolInfoErr = 310008; // 获取自定义工具详情错误
  MCPGetCustomToolListErr = 310009; // 获取自定义工具列表错误
  MCPUpdateCustomToolErr = 310010; // 更新自定义工具错误
  MCPDeleteCustomToolErr = 310011; // 删除自定义工具错误
  MCPGetSquareToolErr = 310012; // 获取内置工具详情错误

  // --- operate-service ---
  // [320000, 329999]
  OperateGeneral = 320000; // 通用错误
  OperateCustom = 320001; // 自定义配置相关错误
}

